--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "homework-bi-lab",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@elastic/elasticsearch": "^8.13.1",
-    "axios": "^1.6.8",
-    "eslint": "^9.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
-  }
+    "name": "homework-bi-lab",
+    "version": "1.0.0",
+    "description": "",
+    "main": "scripts/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "create-index": "node scripts/index.js createIndex",
+        "load-data": "node scripts/index.js loadAllData",
+        "load-data-cron": "node scripts/index.js loadDataCron",
+        "load-data-for-store": "node scripts/index.js loadDataForStore",
+        "server": "node index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@elastic/elasticsearch": "^8.13.1",
+        "@tensorflow/tfjs": "^4.19.0",
+        "@tensorflow/tfjs-node": "^4.19.0",
+        "axios": "^1.6.8",
+        "cors": "^2.8.5",
+        "dataframe-js": "^1.4.4",
+        "eslint": "^8.54.0",
+        "eslint-config-prettier": "^8.10.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "express": "^4.19.2",
+        "node-cron": "^3.0.3",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5"
+    }
 }
